--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta
+    name="google-site-verification"
+    content="google5d89947a3a7edb35.html"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sollink - Provedor de Internet</title>
   <style>
