--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta
-    name="google-site-verification"
-    content="google5d89947a3a7edb35.html"/>
+  <meta name="google-site-verification" content="xHXV4AuIWHY7kwaqNTaXlY6QML-Q3aB4s1WKPJhY1Hc" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sollink - Provedor de Internet</title>
   <style>
